# Elections

./: .gitignore  CLEAN_UI_DESIGN.md  CMakeLists.txt  COMPLETE_PROJECT_GUIDE.md  F24BINCE1M04049(HOORIA ZEENAT).docx  HOW_TO_RUN.md  INTERACTIVE_MENU_GUIDE.md  INTERFACE_PREVIEW.md  QUICK_START_WEB.md  README.md  SETUP_INSTRUCTIONS.md  UI_UPGRADE_SUMMARY.md  VSCODE_SETUP.md  WEB_GUI_GUIDE.md  WEB_GUI_SUMMARY.md  build.bat  build_web.bat  check_setup.ps1  compile.ps1  compile_web.ps1  jordan_2016.csv  jordan_2020.csv  vanuatu_2016.csv  vanuatu_2020.csv  vanuatu_2022.csv
include/: CSVReader.h  ElectionAnalyzer.h  ElectionData.h  ElectionRecord.h  HTTPServer.h
src/: CSVReader.cpp  ElectionAnalyzer.cpp  ElectionData.cpp  HTTPServer.cpp  main.cpp  main_web.cpp
tests/: test_main.cpp
web/: app.js  index.html  style.css
